--- a/CSS/index.css
+++ b/CSS/index.css
@@ -276,15 +276,24 @@
   top: 50%;
   left: 25px;
   transform: translate(0, -50%);
+  z-index: 10;
 }
 .carousel .right-button {
   top: 50%;
   right: 25px;
   transform: translate(0, -50%);
+  z-index: 10;
 }
 .carousel img {
   width: 100%;
-  display: none;
+  position: absolute;
+}
+.carousel .slide {
+  opacity: 0;
+}
+.carousel .showing {
+  opacity: 1;
+  z-index: 2;
 }
 * {
   box-sizing: border-box;
