--- a/CSS/index.css
+++ b/CSS/index.css
@@ -46,6 +46,7 @@ body {
   font-family: 'PT Sans', sans-serif;
 }
 .top-bar {
+  z-index: 100000;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -251,6 +252,12 @@ body {
   font-size: 12px;
   letter-spacing: 1px;
   font-weight: bold;
+}
+.cards-container .hide {
+  display: none;
+}
+.cards-container .show {
+  display: block !important;
 }
 .carousel {
   width: 100%;
